--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,37 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+
+@layer components {
+  body {
+    @apply bg-gray-900 md:px-16 bg-gradient-to-tl from-gray-800 px-10;
+    background-attachment: fixed;
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html {
+  scroll-behavior: smooth;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 * {
-  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+.arrow {
+  animation: arrowDown 0.87s linear infinite alternate;
+}
+
+@keyframes arrowDown {
+  from {
+    top: 1.75rem;
+  }
+  to {
+    top: 2.5rem;
+  }
 }
