--- a/styles/globals.css
+++ b/styles/globals.css
@@ -170,3 +170,14 @@ html {
   padding: 0.4rem 1rem;
   font-weight: bold;
 }
+
+.index_container {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  overflow-x: visible;
+  height: 100vh;
+}
+
+.section_start {
+  scroll-snap-align: start;
+}
