--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 
 @layer components {
   body {
-    @apply bg-gray-900 md:px-16 bg-gradient-to-tl from-gray-800 px-10 text-white;
+    @apply bg-gray-900  bg-gradient-to-tl from-gray-800 text-white;
     background-attachment: fixed;
   }
   .solution blockquote {
@@ -71,14 +71,6 @@
   color: rgb(107 114 128);
 
   margin-right: 1rem;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-*::-webkit-scrollbar {
-  display: none;
 }
 
 * {
@@ -182,4 +174,33 @@ html {
 .section_start {
   scroll-snap-align: start;
   padding-top: 8rem;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+html {
+  scroll-behavior: smooth;
+  scrollbar-width: thin !important;
+  scrollbar-width: 5px;
+  overflow-x: hidden;
+  scrollbar-base-color: rgb(91, 33, 182);
+}
+
+/* *::-webkit-scrollbar {
+  display: none;
+} */
+
+*::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(91, 33, 182);
+}
+
+*::-webkit-scrollbar-track {
+  display: none;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
