--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
     @apply relative before:w-1 before:h-full before:rounded-tl before:rounded-bl before:bg-white before:absolute  my-3;
   }
 
-  .blog blockquote p {
+  .solution blockquote p {
     @apply text-gray-400;
   }
 
@@ -22,19 +22,23 @@
   }
 
   .solution h1 {
-    @apply text-blue-500 text-4xl md:text-5xl  2xl:text-7xl pb-3;
+    @apply text-blue-500  pb-3 text-3xl md:text-4xl;
   }
+  h1 {
+    @apply text-3xl md:text-4xl my-4;
+  }
+
   h2 {
-    @apply text-2xl md:text-4xl;
+    @apply text-2xl md:text-3xl;
   }
   .solution h2 {
-    @apply text-2xl text-blue-500 md:text-4xl;
+    @apply text-blue-500 text-2xl md:text-3xl;
   }
   .solution h3 {
-    @apply text-2xl text-blue-500 md:text-3xl  2xl:text-4xl;
+    @apply text-blue-500 text-lg  md:text-xl;
   }
   h3 {
-    @apply text-lg text-white md:text-xl  xl:text-2xl;
+    @apply text-lg text-white md:text-xl;
   }
   .solution strong {
     @apply text-blue-600;
