--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,8 +78,9 @@
 .line-number::before {
   content: attr(line);
   color: rgb(107 114 128);
-
   margin-right: 1rem;
+  width: 1rem;
+  display: inline-block;
 }
 
 * {
