--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"); */
 
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap");
 
@@ -24,7 +24,6 @@
   p {
     @apply my-2 text-sm md:text-base;
   }
-
   .solution h1 {
     @apply text-blue-500  pb-3 text-3xl md:text-4xl;
   }
@@ -48,7 +47,7 @@
     @apply text-blue-600;
   }
   .solution > * {
-    @apply text-base w-[85%]  md:text-lg xl:text-xl leading-[1.6rem] md:leading-[1.8rem] xl:leading-[2rem] text-gray-100;
+    @apply text-base w-[85%]  leading-[1.6rem] md:leading-[1.8rem] xl:leading-[2rem] text-gray-100;
     margin-left: auto !important;
     margin-right: auto !important;
   }
@@ -109,7 +108,7 @@
 }
 
 * {
-  font-family: "Open sans", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .arrow {
