--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"); */
 
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap");
 
@@ -109,7 +109,7 @@
 }
 
 * {
-  font-family: "Open sans", sans-serif;
+  font-family: "grInter", sans-serif;
 }
 
 .arrow {
