--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,10 @@
     @apply w-full;
   }
 
+  .solution iframe {
+    @apply rounded w-full;
+  }
+
   .solution pre {
     @apply bg-gray-800 bg-gradient-to-br px-3 w-full py-4 to-gray-700;
   }
